--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
   <!-- SMS Form -->
   <div class="form-container">
     <form id="my-form" action="https://formspree.io/f/xrbqbjpk" method="POST" class="notify-form">
-      <h2>SIGN UP FOR 10% OFF YOUR FIRST ORDER.</h2>
+      <h2>SIGN UP TO GET NOTIFIED OF UPCOMING RELEASES.</h2>
       <input type="text" name="name" id="name" placeholder="Name" required>
       <input type="email" name="email" id="email" placeholder="Email" required>
       <input type="tel" name="phone" id="phone" placeholder="Phone Number" required>
@@ -176,7 +176,7 @@
       <p id="my-form-status"></p>
     </form>
     <!-- Success message will show after form submission -->
-    <div id="status-message" class="status-message">THANKS FOR YOUR SUBMISSION! WE WILL NOTIFY YOU OF UPCOMING RELEASES.</div>
+    <div id="status-message" class="status-message">THANKS FOR YOUR SUBMISSION!</div>
   </div>
 
   <!-- Footer -->
