--- a/index.html
+++ b/index.html
@@ -176,7 +176,6 @@
       <h2>SIGN UP TO GET THE LATEST UPDATES.</h2>
       <input type="text" name="name" id="name" placeholder="Name" required>
       <input type="email" name="email" id="email" placeholder="Email" required>
-      <input type="tel" name="phone" id="phone" placeholder="Phone Number" required>
       <button type="submit" id="my-form-button">NOTIFY ME</button>
       <p id="my-form-status"></p>
     </form>
@@ -197,42 +196,28 @@
     </div>
   </footer>
 
-  <script>
-    // Handle the form submission via AJAX to stay on the page
-    var form = document.getElementById("my-form");
+<script type="text/javascript">
+    // Initialize EmailJS with your User ID
+    emailjs.init('YOUR_USER_ID'); // Replace with your User ID from EmailJS
 
-    async function handleSubmit(event) {
-      event.preventDefault();
-      var status = document.getElementById("my-form-status");
-      var data = new FormData(event.target);
-      
-      // Send form data to Formspree via Fetch API (AJAX)
-      fetch(event.target.action, {
-        method: form.method,
-        body: data,
-        headers: {
-          'Accept': 'application/json'
-        }
-      }).then(response => {
-        if (response.ok) {
-          status.innerHTML = "";  // Clear any previous status message
-          form.reset();  // Reset the form after success
-          document.getElementById("status-message").style.display = "block"; // Show success message
-        } else {
-          response.json().then(data => {
-            if (Object.hasOwn(data, 'errors')) {
-              status.innerHTML = data["errors"].map(error => error["message"]).join(", ")
-            } else {
-              status.innerHTML = "There was a problem submitting your form."
-            }
-          })
-        }
-      }).catch(error => {
-        status.innerHTML = "There was a problem submitting your form."
-      });
-    }
+    // Add event listener to your form
+    document.getElementById('contact-form').addEventListener('submit', function(event) {
+      event.preventDefault(); // Prevent the form from submitting the normal way
 
-    form.addEventListener("submit", handleSubmit);
+      var statusElement = document.getElementById('status');
+      statusElement.innerHTML = "Submitting...";
+
+      // Send form data to EmailJS
+      emailjs.sendForm('service_3ctvcdn', 'template_h7r45f5', this)
+        .then(function(response) {
+          // On success, display the success message
+          statusElement.innerHTML = "THANKS FOR YOUR SUBMISSION!";
+          document.getElementById('contact-form').reset(); // Reset the form fields
+        }, function(error) {
+          // On error, display the error message
+          statusElement.innerHTML = "There was a problem with your submission.";
+        });
+    });
   </script>
 
 </body>
