--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
       <a href="https://www.instagram.com/mattsciannany" target="_blank">
         <img src="https://github.com/mattscianna/mattscianna/blob/main/93118C82-5960-4879-B385-C883ADCF1D2B.png?raw=true" alt="Instagram">
       </a>
-      <a href="https://www.tiktok.com/@mattsciananny" target="_blank">
+      <a href="https://www.tiktok.com/@mattsciannany" target="_blank">
         <img src="https://github.com/mattscianna/mattscianna/blob/main/ABF0364A-5BD6-4A48-A967-96C288578371.png?raw=true" alt="TikTok">
       </a>
     </div>
