--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Matt Scianna</title>
   <!-- Favicon Link -->
-  <link rel="icon" href="ms-black.png" type="image/png">
+  <link rel="icon" href="ms-logo.png" type="image/png">
 <head>
     
   <!-- Importing Cardo font from Google Fonts -->
