--- a/website/index.html
+++ b/website/index.html
@@ -1,1 +1,49 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Matt Scianna</title>
+  <link href="https://fonts.googleapis.com/css2?family=Graduate&display=swap" rel="stylesheet">
+  <style>
+    body {
+      margin: 0;
+      background-color: white;
+      font-family: 'Graduate', sans-serif;
+    }
 
+    .sliding-bar {
+      width: 100%;
+      background-color: #8B0000; /* Dark red */
+      overflow: hidden;
+      white-space: nowrap;
+      box-sizing: border-box;
+    }
+
+    .sliding-text {
+      display: inline-block;
+      padding-left: 100%;
+      animation: slide 20s linear infinite;
+      color: white;
+      font-size: 16px;
+      letter-spacing: 2px;
+    }
+
+    @keyframes slide {
+      0%   { transform: translateX(0); }
+      100% { transform: translateX(-100%); }
+    }
+  </style>
+</head>
+<body>
+
+  <!-- Sliding Text Bar -->
+  <div class="sliding-bar">
+    <div class="sliding-text">
+      <span>NOW ACCEPTING EMAIL SIGNUPS • FOOTBALL JERSYES OUT NOW • STAY TUNED • </span>
+      <span>NOW ACCEPTING EMAIL SIGNUPS • FOOTBALL JERSEYS OUT NOW • STAY TUNED • </span>
+    </div>
+  </div>
+
+</body>
+</html>
