--- a/website/index.html
+++ b/website/index.html
@@ -40,7 +40,7 @@
   <!-- Sliding Text Bar -->
   <div class="sliding-bar">
     <div class="sliding-text">
-      <span>NOW ACCEPTING EMAIL SIGNUPS • FOOTBALL JERSYES OUT NOW • STAY TUNED • </span>
+      <span>NOW ACCEPTING EMAIL SIGNUPS • FOOTBALL JERSEYS OUT NOW • STAY TUNED • </span>
       <span>NOW ACCEPTING EMAIL SIGNUPS • FOOTBALL JERSEYS OUT NOW • STAY TUNED • </span>
     </div>
   </div>
