--- a/website/index.html
+++ b/website/index.html
@@ -4,90 +4,93 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Scrolling Banner</title>
-  <link href="https://fonts.googleapis.com/css2?family=Graduate&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Graduate&display=swap" rel="stylesheet" />
   <style>
-    body {
+    * {
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
     }
 
-    .scroll-container {
+    body {
+      background-color: #ffffff;
       font-family: 'Graduate', sans-serif;
-      background: white;
+    }
+
+    .marquee-container {
       overflow: hidden;
       white-space: nowrap;
+      background-color: white;
+      border-bottom: 2px solid #000;
       position: relative;
-      height: 40px;
+      height: 50px;
       display: flex;
       align-items: center;
-      text-transform: uppercase;
-      font-size: 16px;
-      color: black;
     }
 
-    .scroll-content {
+    .marquee {
       display: inline-block;
-      padding-left: 100%;
+      white-space: nowrap;
       animation: scroll-left 20s linear infinite;
+      font-family: 'Graduate', sans-serif;
     }
 
-    .scroll-content span {
-      margin-right: 40px;
+    .marquee span {
+      display: inline-block;
+      padding: 0 40px;
+      font-size: 18px;
+      letter-spacing: 2px;
+      text-transform: uppercase;
+      color: black;
+      position: relative;
     }
 
-    .dot {
+    .marquee span::after {
+      content: '';
       display: inline-block;
       width: 8px;
       height: 8px;
-      background: black;
+      background-color: black;
       border-radius: 50%;
-      margin: 0 20px;
+      margin-left: 40px;
+      position: relative;
+      top: -1px;
     }
 
-    .fade-left, .fade-right {
-      position: absolute;
-      top: 0;
-      width: 60px;
-      height: 100%;
-      background: linear-gradient(to right, white, transparent);
-      z-index: 2;
-    }
-
-    .fade-right {
-      right: 0;
-      background: linear-gradient(to left, white, transparent);
+    .copyright {
+      font-family: Arial, sans-serif;
     }
 
     @keyframes scroll-left {
-      0% { transform: translateX(0); }
-      100% { transform: translateX(-50%); }
+      0% {
+        transform: translateX(0%);
+      }
+      100% {
+        transform: translateX(-50%);
+      }
     }
 
-    @media screen and (max-width: 600px) {
-      .scroll-container {
-        font-size: 14px;
-        height: 36px;
-      }
-
-      .dot {
-        width: 6px;
-        height: 6px;
-        margin: 0 15px;
-      }
+    .marquee-duplicator {
+      display: flex;
+      width: fit-content;
     }
   </style>
 </head>
 <body>
 
-  <div class="scroll-container">
-    <div class="fade-left"></div>
-    <div class="scroll-content">
-      <span>FOOTBALL JERSEYS OUT NOW.</span><span class="dot"></span>
-      <span>FREE SHIPPING ON ORDERS $100+</span><span class="dot"></span>
-      <span>BASED IN NEW YORK. ©</span><span class="dot"></span>
-      <span>NEXT DAY SHIPPING</span><span class="dot"></span>
+  <div class="marquee-container">
+    <div class="marquee marquee-duplicator">
+      <span>FOOTBALL JERSEYS OUT NOW.</span>
+      <span>FREE SHIPPING ON ORDERS $100+</span>
+      <span>BASED IN NEW YORK. <span class="copyright">©</span></span>
+      <span>NEXT DAY SHIPPING.</span>
+
+      <!-- duplicate for seamless loop -->
+      <span>FOOTBALL JERSEYS OUT NOW.</span>
+      <span>FREE SHIPPING ON ORDERS $100+</span>
+      <span>BASED IN NEW YORK. <span class="copyright">©</span></span>
+      <span>NEXT DAY SHIPPING.</span>
     </div>
-    <div class="fade-right"></div>
   </div>
 
 </body>
