--- a/website/index.html
+++ b/website/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Matt Scianna</title>
-  <link href="https://fonts.googleapis.com/css2?family=Graduate&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Graduate&display=swap" rel="stylesheet"/>
   <style>
     * {
       margin: 0;
@@ -27,7 +27,7 @@
     .marquee {
       display: flex;
       white-space: nowrap;
-      animation: scroll 12s linear infinite;
+      animation: scroll 15s linear infinite;
       font-size: 22px;
       text-transform: uppercase;
       color: black;
@@ -37,7 +37,7 @@
     .marquee span {
       display: flex;
       align-items: center;
-      gap: 30px; /* More space between text and dot */
+      gap: 30px;
       padding: 0 10px;
     }
 
@@ -49,14 +49,10 @@
       border-radius: 50%;
     }
 
-    .marquee-inner {
-      display: flex;
-    }
-
     .fade {
       position: absolute;
       top: 0;
-      width: 150px; /* Wider fade */
+      width: 150px;
       height: 100%;
       z-index: 2;
       pointer-events: none;
@@ -72,11 +68,16 @@
       background: linear-gradient(to left, white 0%, transparent 100%);
     }
 
+    .marquee-track {
+      display: flex;
+      width: max-content;
+    }
+
     @keyframes scroll {
-      from {
+      0% {
         transform: translateX(0%);
       }
-      to {
+      100% {
         transform: translateX(-50%);
       }
     }
@@ -87,19 +88,15 @@
   <div class="marquee-wrapper">
     <div class="fade fade-left"></div>
     <div class="fade fade-right"></div>
-
+    
     <div class="marquee">
-      <div class="marquee-inner">
+      <div class="marquee-track">
+        <!-- First set of messages -->
         <span>FOOTBALL JERSEYS OUT NOW.</span>
         <span>FREE SHIPPING ON ORDERS $100+</span>
         <span>BASED IN NEW YORK.</span>
         <span>NEXT DAY SHIPPING.</span>
-
-        <!-- Duplicated for seamless loop -->
-        <span>FOOTBALL JERSEYS OUT NOW.</span>
-        <span>FREE SHIPPING ON ORDERS $100+</span>
-        <span>BASED IN NEW YORK.</span>
-        <span>NEXT DAY SHIPPING.</span>
+        <!-- Duplicate to ensure seamless loop -->
         <span>FOOTBALL JERSEYS OUT NOW.</span>
         <span>FREE SHIPPING ON ORDERS $100+</span>
         <span>BASED IN NEW YORK.</span>
